[package]
name = "tera-client-packer"
description = "A CLI Utility to pack, compress and fragment TERA Online client files"
version = "0.1.1"
edition = "2021"
authors = ["Saegusae <saegusa@gooseforge.com>"]
repository = "https://github.com/Saegusae/tera-client-packer"
license = "MPL-2.0"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
indicatif = "0.17.7"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
walkdir = "2.4.0"
