[package]
name = "tera-client-packer"
description = "A CLI Utility to pack, compress and fragment TERA Online client files"
version = "0.1.1"
edition = "2021"
authors = ["Saegusae <saegusa@gooseforge.com>"]
repository = "https://github.com/Saegusae/tera-client-packer"
license = "MPL-2.0"

[package.metadata.wix]
upgrade-guid = "98EB68E3-EDD0-49EF-8027-BA3CBEB356EB"
path-guid = "0ECEB17E-1DC2-4F3E-9483-CB24B30525E8"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
crossbeam = "0.8.2"
flate2 = "1.0.28"
indicatif = "0.17.7"
rayon = "1.8.0"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
walkdir = "2.4.0"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.3.1"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "plan"
